<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"

    >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutDroneName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/drone_name_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/spacing_24dp"
        android:background="@color/lightBlue"
        android:textColorHint="@color/black"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextDroneName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightGreen"
            android:drawableRight="@drawable/baseline_nome"

            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutDroneModel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/drone_model_label"
        android:layout_marginTop="@dimen/spacing_24dp"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutDroneName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/lightBlue"
        android:textColorHint="@color/black"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextDroneModel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightGreen"
            android:drawableRight="@drawable/baseline_modelo"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutDroneDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/drone_date_label"
        android:layout_marginTop="@dimen/spacing_24dp"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutDroneModel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/lightBlue"
        android:textColorHint="@color/black"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextDroneDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightGreen"
            android:drawableRight="@drawable/baseline_calendario"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutDroneBattery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/drone_battery_label"
        android:layout_marginTop="@dimen/spacing_24dp"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutDroneDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/lightGreen"
        android:textColorHint="@color/black"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextDroneBattery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightGreen"
            android:drawableRight="@drawable/baseline_capacidade_bateria"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutDroneSerie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/drone_serie_label"
        android:layout_marginTop="@dimen/spacing_24dp"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutDroneBattery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColorHint="@color/black"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextDroneSerie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightGreen"
            android:drawableRight="@drawable/baseline_numero_serie"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerUpdateDroneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_drone_button_label"
        android:layout_marginTop="@dimen/spacing_24dp"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutDroneSerie"
        app:layout_constraintEnd_toEndOf="@id/button_back_to_drones"
        app:layout_constraintStart_toStartOf="@id/button_back_to_drones"
        android:drawableRight="@drawable/baseline_cadastrar"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_back_to_drones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_drones_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"


        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>