<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >



    <TextView
        android:id="@+id/text_view_projeto1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:text="@string/textoProjeto1"
        android:layout_marginTop="@dimen/margin24"
        android:layout_marginLeft="@dimen/spacing_4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:elegantTextHeight="true"


        />

    <TextView
        android:id="@+id/text_view_projeto2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:text="@string/textoProjeto2"
        android:layout_marginTop="@dimen/spacing_8dp"

        app:layout_constraintStart_toStartOf="@id/text_view_projeto1"
        app:layout_constraintTop_toBottomOf="@id/text_view_projeto1"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:elegantTextHeight="true"


        />

    <TextView
        android:id="@+id/text_view_projeto3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:text="@string/textoProjeto3"
        android:layout_marginTop="@dimen/spacing_8dp"
        app:layout_constraintStart_toStartOf="@id/text_view_projeto2"
        app:layout_constraintTop_toBottomOf="@id/text_view_projeto2"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:elegantTextHeight="true"


        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonBackToMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/spacing_24dp"
        android:layout_marginBottom="@dimen/spacing_24dp"
        app:srcCompat="@android:drawable/ic_menu_revert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />



</androidx.constraintlayout.widget.ConstraintLayout>